# urlquote

./: .gitignore  .travis.yml  Cargo.toml  Changelog.md  Jenkinsfile  LICENSE  README.md  Readme.md  bench.py  pyproject.toml  setup.py  test.py
.github/workflows/: publish-wheel.yml  test.yml
python/urlquote/: __init__.py  quoting.py
rust/: Cargo.toml  native.h
rust/benches/: lib.rs
rust/src/: lib.rs  quoting.rs
src/: lib.rs  quoting.rs
tests/: test_urlquote.py
travis/: Dockerfile  build-wheels.sh
travis/linux/: install.sh  script.sh
travis/osx/: install.sh
travis/windows/: script.sh
urlquote/: __init__.py  _native__lib.cp310-win_amd64.pyd  quoting.py
