[package]
name = "urlquote"
version = "0.1.0"
authors = ["Blue Yonder <oss@blue-yonder.com>"]
publish = false
edition = "2021"

[lib]
crate-type = ['cdylib']

[dependencies]
percent-encoding = "2.1.0"

[profile.release]
# Panics should only be caused by logic errors and are considered bugs
panic = 'abort'
# Link time Optimization
lto = true

[package.metadata.maturin]
python-source = "python" 